--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jul 07</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (1 child; 11 adults)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>1 drowned, dinghy collided with fishing boat on way from Libya to Italy; 11 missing</b><br>Source: LR<br>
+Found dead: <b>26/12/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tesfa Bizuneh</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>jumped out of 3rd floor hospital window in Munich (DE) out of fear of deportation</b><br>Source: IMEDANA/ZAG<br>
 
 <br>
 
