--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/12/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child, 4)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after dinghy sank trying to reach Samos (GR) from Turkey</b><br>Source: EarthT/PICUM/NOB<br>
+Found dead: <b>Oct 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>disappeared after small boat capsized near Tunisia on way to Sicily (IT)</b><br>Source: AP/Tagesspiegel<br>
 
 <br>
 
