--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>disappeared after small boat capsized near Tunisia on way to Sicily (IT)</b><br>Source: AP/Tagesspiegel<br>
+Found dead: <b>19/10/03</b><br>Number of person: <b>58</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>reportedly died of hypothermia and starvation on ship travelling from Libya to Italy</b><br>Source: ST/LR/MNS/Pogledi/GuardianUn./VK/SP/Vivre/DPA<br>
 
 <br>
 
