--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/10/03</b><br>Number of person: <b>58</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>reportedly died of hypothermia and starvation on ship travelling from Libya to Italy</b><br>Source: ST/LR/MNS/Pogledi/GuardianUn./VK/SP/Vivre/DPA<br>
+Found dead: <b>21/08/07</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (2 women; 4 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of starvation, bodies thrown overboard and found by military pilots 60 miles off Lampedusa (IT)</b><br>Source: ANSA/FE/LR/INF/MAG/CDS<br>
 
 <br>
 
