--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/05/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Miroslawa Kolodziejska (w, 59)</b><br>Region of origin: <b>Poland</b><br>Cause of death: <b>suffocated by border police when detained at Frankfurt Airport (DE) on way from pilgrimage in Rome</b><br>Source: Wib/FR-NieSa/FR/ProAsyl/ZAG<br>
+Found dead: <b>26/09/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of exhaustion after being rescued, was trying to swim from Morocco to the Spanish enclave of Ceuta (ES)</b><br>Source: EPress<br>
 
 <br>
 
