--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/11/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Haydar Kaya</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>missing, reportedly dead after deportation from Munich (DE) to Turkey</b><br>Source: ARI<br>
+Found dead: <b>04/10/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>stowaway, died when truck hit bridge near Cheb (CZ)</b><br>Source: VK/taz/NOS/teletext/DPA<br>
 
 <br>
 
