--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2002</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned, bodies discovered by Spanish police near Cabo de Gata (ES)</b><br>Source: ANP/AFP<br>
+Found dead: <b>27/07/15</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found below deck of wooden barge off coast of Libya</b><br>Source: RTE/HeraldIRL/Reu./Mail Online<br>
 
 <br>
 
