--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 09</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N. (1 pregnant woman)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died after boat drifted off Oran (DZ) having run out of fuel; pregnant woman died during childbirth</b><br>Source: FE/NAN/NT/ODILI<br>
+Found dead: <b>02/01/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran, Somalia</b><br>Cause of death: <b>reportedly drowned after boat carrying 15 people sank off coast of Turkey</b><br>Source: TP/PICUM/NOB<br>
 
 <br>
 
