--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/06/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body found near Lampedusa (IT)</b><br>Source: ILM/Unipa<br>
+Found dead: <b>19/01/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±20)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, electrocuted when train he was hiding on passed under power lines near Fréthun (FR)</b><br>Source: MNS/AP/Telegraaf/MUGAK<br>
 
 <br>
 
