--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/02/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tommy Klen Mayola (man, 19)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>stowaway, froze to death in wheel bay of airplane flying from London (GB) to USA</b><br>Source: NCADC/INexile/Telegraph/IRR<br>
+Found dead: <b>21/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Maulut Rozga (boy, 3)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>froze to death in refrigerated truck while trying to reach Greece from Turkey</b><br>Source: NCADC<br>
 
 <br>
 
