--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/05/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Forsina Makoni (woman, 79)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>suicide, set herself on fire after asylum claim was rejected</b><br>Source: Socialist Worker/NCADC/IRR<br>
+Found dead: <b>21/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>body found on beach in Granada (ES)</b><br>Source: MUGAK/ST<br>
 
 <br>
 
