--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/09/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Raheemullah Oryakhel (boy, 14)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>found dead near Port of Calais (FR), was travelling alone from Afghanistan to Great Britain</b><br>Source: GuardianUn./VoixDuNord<br>
+Found dead: <b>18/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young woman)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>suicide in detention centre in Luxembourg while awaiting expulsion</b><br>Source: MNS<br>
 
 <br>
 
