--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/12/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>found in boat rescued by Spanish authorities near Arguineguín, Canary Islands (ES)</b><br>Source: Publico/NOB<br>
+Found dead: <b>25/10/98</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (1 baby; 2 women; 1 man)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after boat leaving Port of Vlorë (AL) collided then caught fire</b><br>Source: MNS/AFP/ARD/ZDF<br>
 
 <br>
 
