--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Apr 06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammed Yussif (man, 28)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned in shipwreck near Lampedusa (IT) while attempting to re-enter Italy</b><br>Source: BorderlineEU<br>
+Found dead: <b>13/11/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>drowned after jumping ship trying to reach Mayotte (FR)</b><br>Source: Mayotte sans frontières<br>
 
 <br>
 
