--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2017</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 girl, 10; 1 woman, mother)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>trapped under capsized migrant boat off coast of Alboran Island (ES); 1 drowned, 1 died on way to hospital</b><br>Source: MirrorNews<br>
+Found dead: <b>27/12/02</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died in a fire they started at police station in Málaga (ES) after 2 days in detention as police refused to open door</b><br>Source: SOS/MUGAK/APDHA<br>
 
 <br>
 
