--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>May 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Moshen Sliti (41)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died of heart attack in detention centre in Arenc (FR) after delay in medical care</b><br>Source: MNS/IRR/EUMC<br>
+Found dead: <b>07/11/07</b><br>Number of person: <b>52</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Gambia, Mali, Senegal</b><br>Cause of death: <b>died of starvation and dehydration after boat motor broke down on way from Senegal to Egypt</b><br>Source: DiarioVasco/DiariodeNavarra/MNS/DiariadeNoticias<br>
 
 <br>
 
