--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/11/07</b><br>Number of person: <b>52</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Gambia, Mali, Senegal</b><br>Cause of death: <b>died of starvation and dehydration after boat motor broke down on way from Senegal to Egypt</b><br>Source: DiarioVasco/DiariodeNavarra/MNS/DiariadeNoticias<br>
+Found dead: <b>31/12/99</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned in the Adriatic Sea when dinghy travelling to Italy sank</b><br>Source: DPA/Morgengr./taz/VK/CDS/LS/TL<br>
 
 <br>
 
