--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/12/10</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>went missing when ship sank near Kani-Kéli, Mayotte (FR); 31 survivors</b><br>Source: info/FE<br>
+Found dead: <b>02/03/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±27)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>decomposed body found floating near beach of La Carihuela, Torremolinos (ES)</b><br>Source: SUR/MUGAK<br>
 
 <br>
 
