--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/10/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found by Greek coast guard aboard boat travelling to Italy with 150 migrants</b><br>Source: NOB<br>
+Found dead: <b>02/11/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>A.K. (23)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>died of injuries inflicted by Greek border guard in Kastoria, at Greek-Albanian border</b><br>Source: GHM/OMCT/Ya.N/ProAsyl<br>
 
 <br>
 
