--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/11/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>A.K. (23)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>died of injuries inflicted by Greek border guard in Kastoria, at Greek-Albanian border</b><br>Source: GHM/OMCT/Ya.N/ProAsyl<br>
+Found dead: <b>01/02/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±30)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, fatally hit trying to jump on freight train in the Channel Tunnel (GB/FR)</b><br>Source: MNS/IRR<br>
 
 <br>
 
