--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/02/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±30)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, fatally hit trying to jump on freight train in the Channel Tunnel (GB/FR)</b><br>Source: MNS/IRR<br>
+Found dead: <b>15/11/16</b><br>Number of person: <b>98</b><br>Name, gender, age: <b>N.N. (9 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>8 drowned after dinghy capsized on way from Libya; 90 missing, 23 rescued</b><br>Source: Independent/Reu./UNHCR/SOSMed/AFP/MOAS<br>
 
 <br>
 
