--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zeliha Kalendergil (girl, 10)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, suffocated in cargo container travelling to Ireland from Belgium</b><br>Source: AFP/VK/SZ/MET/AP/NCADC/MNS/RTE/KO/MN<br>
+Found dead: <b>04/01/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kwaku Agyei (man, 35)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>suicide, in Munich (DE) after being told he would be deported</b><br>Source: IRR/CARF/ESG/ZAG<br>
 
 <br>
 
