--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/06/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>suicide, asylum seeker in Gimo reception centre in Sweden</b><br>Source: MNS<br>
+Found dead: <b>08/01/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Issah M. (30)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>disappeared, presumed dead after deportation from Germany to Togo</b><br>Source: ARI<br>
 
 <br>
 
