--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/10/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Beverley Fowler (woman, 32)</b><br>Region of origin: <b>Jamaica</b><br>Cause of death: <b>suicide, hanged herself in Durham prison (GB) out of fear of deportation</b><br>Source: NCADC/IRR<br>
+Found dead: <b>13/09/15</b><br>Number of person: <b>34</b><br>Name, gender, age: <b>N.N. (4 babies; 11 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned near Farmakonisi (GR) when overcrowded wooden boat was hit in the Aegean Sea</b><br>Source: GuardianUn./AthensNewsAgency/Mail Online<br>
 
 <br>
 
