--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/09/11</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died of asphyxiation from a fire caused by candle in Paris squat (FR)</b><br>Source: MNS/FTRC/Raz/Le Monde/Libération<br>
+Found dead: <b>Aug 15</b><br>Number of person: <b>48</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after rubber boat deflated in the Strait of Sicily; 54 rescued</b><br>Source: Imkander/Independent/BBC<br>
 
 <br>
 
