--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/07/03</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat capsized off coast of Fuerteventura in Canary Islands (ES)</b><br>Source: AFP/MNS/MUGAK/ST<br>
+Found dead: <b>14/01/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammad Sillah (man, 23)</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>died after being denied medical treatment in hospital in Remscheid (DE), ambulance call was refused</b><br>Source: Karawane<br>
 
 <br>
 
