--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/01/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammad Sillah (man, 23)</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>died after being denied medical treatment in hospital in Remscheid (DE), ambulance call was refused</b><br>Source: Karawane<br>
+Found dead: <b>12/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Osuigwe C. Kenechukwu (man, 22)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died of medical neglect in refugee transit centre in Thurhof, Oberbüren (CH)</b><br>Source: Vivre/MNS/Indymedia/Augen auf<br>
 
 <br>
 
